# MeetingCast

./: .gitignore  CLAUDE.md  PHASE1_GUIDE.md  PROJECT_STRUCTURE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: ADD_LANGUAGE.md  ARCHITECTURE.md  LATENCY.md  LOOP_ENGINEERING.md
prototype/: .env.example  audio_capture.py  audio_stream.py  cli.py  latency_bench.py  requirements.txt  translator.py  vad.py
prototype/eval/: checks.py  run_eval.py
prototype/eval/golden/: translation_cases.jsonl
prototype/stt/: __init__.py  base.py  cloud.py  lang_resources.py  local.py  openai_realtime.py
python-sidecar/: protocol.py  stt_engine.py
scripts/: build-sidecar.sh  postbuild-sign.sh
shared/: languages.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/prompts/: translate_system.txt
src-tauri/src/: config.rs  errors.rs  keycheck.rs  languages.rs  lib.rs  main.rs  session.rs  sidecar.rs  traces.rs  translator.rs  verify.rs
src/components/: GlossaryModal.tsx  HistoryModal.tsx  MicMeter.tsx  PrewarmChecklist.tsx  SettingsModal.tsx  WelcomeWizard.tsx
src/lib/: errors.ts  languages.ts  types.ts
src/windows/: ControlWindow.tsx  TranslationWindow.tsx
tests/python/: test_hallucination_gates.py  test_language_registry.py  test_sentence_split.py
