[package]
name = "meetingcast"
version = "0.1.0"
description = "Real-time Chinese meeting translator (zh → en + vi)"
authors = ["TPI Software"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meetingcast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
eventsource-stream = "0.2"
futures-util = "0.3"
dotenvy = "0.15"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tauri-plugin-global-shortcut = "2"

